--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "angular-cli-ghpages": "^1.0.0",
     "bootstrap": "^4.6.0",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~7.5.0",
